<resources>
    <string name="app_name">SpendSmart</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="splitwise">Splitwise</string>
    <string name="button_back">Back</string>
    <string name="button_done">Done</string>
    <string name="text_forgot_your_password"><u>Forgot your Password?</u></string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Full Name</string>
    <string name="upload_image_description">Upload Image</string>
    <string name="email_address">Email</string>
    <string name="text_term_condition"><u>By singing up, you accept the Spendsmart Terms of Services.</u></string>
    <string name="welcome_splitwise_image">Splitwise Image</string>
    <string name="welcome_sign_up">SIGN UP</string>
    <string name="welcome_log_in">LOG IN</string>

    <string name="welcome_contact_us"><u>Contact us</u></string>
    <string name="welcome_privacy_policy"><u>Privacy Policy</u> |</string>
    <string name="welcome_terms"><u>Terms</u> |</string>

</resources>
